# ChangeLog for dev-util/gtk-doc
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.37 2005/02/05 23:26:12 blubb Exp $

  06 Feb 2005; Simon Stelling <blubb@gentoo.org> gtk-doc-1.2-r1.ebuild:
  stable on amd64

  19 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> gtk-doc-1.2-r1.ebuild:
  Stable on alpha.

  23 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> gtk-doc-1.2-r1.ebuild:
  Stable on sparc

  23 Nov 2004; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.2-r1.ebuild:
  Don't use einstall. Marked stable on x86.

*gtk-doc-1.2-r1 (18 Sep 2004)

  18 Mar 2004; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.2-r1.ebuild:
  Don't inherit from the gnome2 eclass. Reworked dependencies.

  28 Jun 2004; Tom Gall <tgall@gentoo.org> gtk-doc-1.1.ebuild:
  stable on ppc64, bug #54792

  30 May 2004; L. Boshell <leonardop@gentoo.org> gtk-doc-1.1.ebuild:
  Include `debug' in IUSE.

  21 Mar 2004; Joshua Kinard <kumba@gentoo.org> gtk-doc-1.1.ebuild:
  Marked stable on mips.

  08 Mar 2004; Brian Jackson <iggy@gentoo.org> gtk-doc-1.1.ebuild:
  remove s390 from keywords

*gtk-doc-1.2 (08 Mar 2004)

  08 Mar 2004; L. Boshell <leonardop@gentoo.org> gtk-doc-1.2.ebuild:
  New version, dependencies adjustments, install examples, install .el
  resource if the `emacs' USE var is active.

  04 Mar 2004; Joshua Kinard <kumba@gentoo.org> gtk-doc-1.1.ebuild:
  Added ~mips to KEYWORDS to satisfy repoman deps.

  02 Mar 2004; Brian Jackson <iggy@gentoo.org> gtk-doc-1.1.ebuild:
  added s390 to keywords

  14 Feb 2004; <spider@gentoo.org> gtk-doc-0.9-r2.ebuild, gtk-doc-1.0.ebuild,
  gtk-doc-1.1.ebuild:
  finish off some DEPEND/RDEPEND bugs. (pkgconfig to DEPEND only)

  12 Jan 2004; Guy Martin <gmsoft@gentoo.org> gtk-doc-1.1.ebuild :
  Marked stable on hppa.

  09 Jan 2004; Jason Wever <weeve@gentoo.org> gtk-doc-1.1.ebuild:
  Marked stable on sparc.
