@@ -1,8 +1,8 @@
+MD5 ea837b6b4bb340fe98ed4c08dcb9cffd ChangeLog 4188
 MD5 674733f144d58b191d863617c7af362e gtk-doc-1.1.ebuild 938
-MD5 c75a505b5c98f9d108146836a3359e5c ChangeLog 4042
 MD5 cb1513999510ccbcbcac73c3d6120bdd gtk-doc-1.2-r1.ebuild 999
-MD5 dd124b008102c945d9a4cf4b944e55ac gtk-doc-1.2.ebuild 842
+MD5 52a3dc0bd4f08e63ff16032553396c74 gtk-doc-1.3.ebuild 963
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 9e9bf533df75a1c8173b97715f5391a6 files/digest-gtk-doc-1.2-r1 64
 MD5 c036d436f5c42ec78ef0bb5507eb5437 files/digest-gtk-doc-1.1 64
-MD5 9e9bf533df75a1c8173b97715f5391a6 files/digest-gtk-doc-1.2 64
+MD5 7cc023d59d3e76467752a9eddc070059 files/digest-gtk-doc-1.3 64
+MD5 9e9bf533df75a1c8173b97715f5391a6 files/digest-gtk-doc-1.2-r1 64
