@@ -1,0 +1,1 @@
+MD5 d105d5b28e7e023ab1b7e85fb65e45c3 gtk-doc-1.3.tar.bz2 145835
