@@ -1,11 +1,16 @@
 # ChangeLog for dev-util/gtk-doc
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.37 2005/02/05 23:26:12 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.38 2005/03/09 06:58:43 leonardop Exp $
+
+*gtk-doc-1.3 (09 Mar 2005)
+
+  09 Mar 2005; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.3.ebuild:
+  New release. Resolves bug #81081.
 
   06 Feb 2005; Simon Stelling <blubb@gentoo.org> gtk-doc-1.2-r1.ebuild:
   stable on amd64
 
-  19 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> gtk-doc-1.2-r1.ebuild:
+  19 Dec 2004; Bryan Ãstergaard <kloeri@gentoo.org> gtk-doc-1.2-r1.ebuild:
   Stable on alpha.
 
   23 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> gtk-doc-1.2-r1.ebuild:
